/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/3.5/userguide/tutorial_java_projects.html
 */


// Apply the java plugin to add support for Java
apply plugin: 'java'
apply plugin: 'kotlin'
apply plugin: 'com.github.johnrengelman.shadow'


// Apply the application plugin to add support for building an application
apply plugin: 'application'

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
}

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    compile 'com.google.guava:guava:21.0'
    compile 'org.javasimon:javasimon-core:4.1.2'
    compile 'ch.qos.logback:logback-classic:1.2.3'
    compile 'org.fusesource.jansi:jansi:1.16'
    compile "com.sparkjava:spark-core:$sparkjava_version"
    compile "com.sparkjava:spark-template-jinjava:$sparkjava_version"
    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    compile 'com.google.code.gson:gson:2.8.2'
    compile 'org.codejargon:fluentjdbc:1.8.3'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'

    // Use JUnit test framework
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:2.4.0'
}

configurations {
    //runtime.exclude module: 'slf4j-api'
}

sourceCompatibility = 1.12
targetCompatibility = 1.12

// Define the main class for the application
mainClassName = 'murphytalk.web.WebKt'
buildscript {
    ext{
        kotlin_version = '1.3.50'
        sparkjava_version = '2.7.1'
    }
    repositories {
        mavenCentral()
        maven {
            url = uri("https://plugins.gradle.org/m2/")
        }
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    }
}

sourceSets {
    main.java.srcDirs += 'src/main/kotlin'
}

test{
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED'
}

shadowJar {
    archiveBaseName= "JavaNote"
    archiveVersion = "1.0"
    exclude ("**/test/**")
}

task listrepos  {
    println "Repositories:"
    project.repositories.each { println "Name: " + it.name + "; url: " + it.url }
}

tasks {
    build {
        dependsOn(shadowJar)
    }
}
